--- a/Master Thesis/literatura.bib
+++ b/Master Thesis/literatura.bib
@@ -195,3 +195,9 @@
 	title = {Sequencing 101: ploidy, haplotypes, and phasing — how to get more from your sequencing data},
 	url = {https://www.pacb.com/blog/ploidy-haplotypes-and-phasing/}
 }
+
+@misc{popular_ml,
+	author = {Statistics & Data},
+	title = {Most Popular Machine Learning Libraries – 2014/2021},
+	url = {https://statisticsanddata.org/data/most-popular-machine-learning-libraries/}
+}
